# auto-chunker

./: .gitignore  .sourcery.yaml  api_management.py  auto-chunker.proto  auto_chunker_pb2.py  auto_chunker_pb2_grpc.py  chunking.py  chunking_method.py  data_preparation.py  jsonl-file-creator.proto  main.py  pyproject.toml  serverless.py  write_csv.py
_proto/: auto-chunker.proto  jsonl_file_creator_pb2_grpc.py
api/: _types.py  api_management.py  chunking.py  data_preparation.py  main.py  openai_client.py  server.py  write_csv.py
api/_proto/: auto_chunker_pb2.py  jsonl_file_creator_pb2.py
api/application/: chunking.py  write_csv.py
api/errors/: _exceptions.py  email_admin.py  error_handling.py
api/incoming/: api.py  authenticate.py
api/incoming/dependencies/: authenticate.py
api/outgoing/: call_jsonl_converter.py  openai_client.py  openai_management.py
auto_chunker/: _config.py  main.py  settings.ini  start_server.py
auto_chunker/application/: chunking.py
auto_chunker/errors/: email_admin.py  error_handling.py
auto_chunker/incoming/schema/: auto_chunk_request_schema.py
auto_chunker/outgoing/: call_jsonl_converter.py  openai_client.py
src/auto_chunker/: _config.py  config.ini  main.py
src/auto_chunker/errors/: _exceptions.py
src/auto_chunker/incoming/: api.py
src/auto_chunker/outgoing/: call_jsonl_converter.py  openai_client.py  openai_management.py
src/errors/: _exceptions.py  error_handling.py
src/outgoing/: openai_client.py
tests/: test_api_management.py  test_chunking.py  test_data_preparation.py  test_openai_client.py  test_write_csv.py
tests/integration/: conftest.py  manual_test.py  test_full_process.py
tests/integration/manual_run/: manual_test.py
tests/integration/sample/: sample2.txt  test_sample.txt
tests/unit/: test_api_management.py  test_chunking.py  test_data_preparation.py  test_openai_client.py  test_write_csv.py
(+1 files in other folders)
