[project]
name = "auto-chunker"
version = "0.1.0"
description = "Chunks text and saves it as a jsonl file"
authors = [{name = "Ashlynn Antrobus", email = "ashlynn@prosepal.io"}]
requires-python = ">=3.10"
dependencies = [
    "grpcio-tools>=1.66.2",
    "loguru>=0.7.2",
    "openai>=1.51.2",
    "python-decouple>=3.8",
    "tiktoken>=0.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "api"
]