[project]
name = "auto-chunker"
version = "0.1.0"
description = "Chunks text and saves it as a jsonl file"
authors = [
    { name = "Ashlynn Antrobus", email = "ashrobertsantrobus@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.10",
    "fastapi>=0.115.4",
    "loguru>=0.7.2",
    "mangum>=0.19.0",
    "openai>=1.54.1",
    "python-decouple>=3.8",
    "resend>=2.4.0",
    "tiktoken>=0.8.0",
    "uvicorn>=0.32.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]
